--- a/DevKit/DevKit.UI/App.config
+++ b/DevKit/DevKit.UI/App.config
@@ -10,7 +10,7 @@
   <connectionStrings>
     <add name="DevKitEntities" 
          connectionString="metadata=res://*/EntityModel.csdl|res://*/EntityModel.ssdl|res://*/EntityModel.msl;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;
-         Data Source=D:\Git Repo\New Dev\DevKit-master\DevKit\DevKit.Entity\DevKitDB.sdf&quot;" providerName="System.Data.EntityClient" />
+         Data Source=D:\Developer\Projects\DevKit\DevKit\DevKit.Entity\DevKitDB.sdf&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
