--- a/DevKit/SideBySideTextBox/SideBySideTextBox.csproj
+++ b/DevKit/SideBySideTextBox/SideBySideTextBox.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{3E58B210-7088-4376-85F7-67E65FE00BF5}</ProjectGuid>
+    <ProjectGuid>{0F61DB54-BDFB-406D-B476-4BA1C9B8681B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DevKit.Model</RootNamespace>
-    <AssemblyName>DevKit.Model</AssemblyName>
+    <RootNamespace>SideBySideTextBox</RootNamespace>
+    <AssemblyName>SideBySideTextBox</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -32,6 +32,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,13 +42,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CheckInModel.cs" />
-    <Compile Include="LogText.cs" />
+    <Compile Include="Engine.cs" />
+    <Compile Include="frmCompare.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmCompare.Designer.cs">
+      <DependentUpon>frmCompare.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServerModel.cs" />
-    <Compile Include="ShellOutput.cs" />
-    <Compile Include="SPModel.cs" />
-    <Compile Include="TFSAuthModel.cs" />
+    <Compile Include="SideBySideRichTextBox.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="SideBySideRichTextBox.Designer.cs">
+      <DependentUpon>SideBySideRichTextBox.cs</DependentUpon>
+    </Compile>
+    <Compile Include="StringTokenizer.cs" />
+    <Compile Include="Structures.cs" />
+    <Compile Include="TextFile.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="frmCompare.resx">
+      <DependentUpon>frmCompare.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SideBySideRichTextBox.resx">
+      <DependentUpon>SideBySideRichTextBox.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
