--- a/DevKit/DevKit.UI/Properties/Settings.settings
+++ b/DevKit/DevKit.UI/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="tfs_password" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="mainserver" Type="System.String" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
