--- a/DevKit/DevKit.UI/App.config
+++ b/DevKit/DevKit.UI/App.config
@@ -8,9 +8,9 @@
     </sectionGroup>
   </configSections>
   <connectionStrings>
-    <add name="DevKitEntities" 
-         connectionString="metadata=res://*/EntityModel.csdl|res://*/EntityModel.ssdl|res://*/EntityModel.msl;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;
-         Data Source=D:\Developer\Projects\DevKit\DevKit\DevKit.Entity\DevKitDB.sdf&quot;" providerName="System.Data.EntityClient" />
+    <add name="DevKitEntities"
+         connectionString="metadata=res://*/EntityModel.csdl|res://*/EntityModel.ssdl|res://*/EntityModel.msl;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;&#xD;&#xA;         Data Source=D:\Developer\Projects\DevKit\DevKit\DevKit.Entity\DevKitDB.sdf&quot;"
+                                                                                           providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -42,6 +42,9 @@
       </setting>
       <setting name="tfs_password" serializeAs="String">
         <value />
+      </setting>
+      <setting name="mainserver" serializeAs="String">
+        <value>0</value>
       </setting>
     </DevKit.UI.Properties.Settings>
   </userSettings>
