--- a/DevKit/DevKit.Business/DevKit.Business.csproj
+++ b/DevKit/DevKit.Business/DevKit.Business.csproj
@@ -44,6 +44,7 @@
     <Compile Include="EntityBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StoredProcedureBusiness.cs" />
+    <Compile Include="TableBusiness.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DevKit.Common\DevKit.Common.csproj">
