--- a/DevKit/DevKit.Data/DevKit.Data.csproj
+++ b/DevKit/DevKit.Data/DevKit.Data.csproj
@@ -63,6 +63,7 @@
     <Compile Include="EntityData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StoredProcedureData.cs" />
+    <Compile Include="TableData.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DevKit.Common\DevKit.Common.csproj">
