--- a/DevKit/DevKit.UI/App.config
+++ b/DevKit/DevKit.UI/App.config
@@ -3,8 +3,8 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-      <section name="DevKit.UI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="DevKit.UI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <connectionStrings>
@@ -23,7 +23,7 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
     <requiredRuntime version="v4.0.20506" />
   </startup>
-  <userSettings>
+  <applicationSettings>
     <DevKit.UI.Properties.Settings>
       <setting name="path_local_sp" serializeAs="String">
         <value />
@@ -47,5 +47,5 @@
         <value>0</value>
       </setting>
     </DevKit.UI.Properties.Settings>
-  </userSettings>
+  </applicationSettings>
 </configuration>
