--- a/DevKit/DevKit.UI/Properties/Settings.settings
+++ b/DevKit/DevKit.UI/Properties/Settings.settings
@@ -2,25 +2,25 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="DevKit.UI.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="path_local_sp" Type="System.String" Scope="User">
+    <Setting Name="path_local_sp" Type="System.String" Scope="Application">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="path_tfs_sp" Type="System.String" Scope="User">
+    <Setting Name="path_tfs_sp" Type="System.String" Scope="Application">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="path_local_version" Type="System.String" Scope="User">
+    <Setting Name="path_local_version" Type="System.String" Scope="Application">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="path_tfs_version" Type="System.String" Scope="User">
+    <Setting Name="path_tfs_version" Type="System.String" Scope="Application">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="tfs_username" Type="System.String" Scope="User">
+    <Setting Name="tfs_username" Type="System.String" Scope="Application">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="tfs_password" Type="System.String" Scope="User">
+    <Setting Name="tfs_password" Type="System.String" Scope="Application">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="mainserver" Type="System.String" Scope="User">
+    <Setting Name="mainserver" Type="System.String" Scope="Application">
       <Value Profile="(Default)">0</Value>
     </Setting>
   </Settings>
