--- a/DevKit/DevKit.Data/DevKit.Data.csproj
+++ b/DevKit/DevKit.Data/DevKit.Data.csproj
@@ -46,6 +46,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\..\..\References\New folder\Microsoft.SqlServer.Smo.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.SqlServer.SqlEnum, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>C:\References\Microsoft.SqlServer.SqlEnum.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -64,6 +68,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StoredProcedureData.cs" />
     <Compile Include="TableData.cs" />
+    <Compile Include="TableHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DevKit.Common\DevKit.Common.csproj">
