--- a/DevKit/DevKit.UI/App.config
+++ b/DevKit/DevKit.UI/App.config
@@ -9,7 +9,7 @@
   </configSections>
   <connectionStrings>
     <add name="DevKitEntities"
-         connectionString="metadata=res://*/EntityModel.csdl|res://*/EntityModel.ssdl|res://*/EntityModel.msl;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;&#xD;&#xA;         Data Source=D:\Developer\Projects\DevKit\DevKit\DevKit.Entity\DevKitDB.sdf&quot;"
+         connectionString="metadata=res://*/EntityModel.csdl|res://*/EntityModel.ssdl|res://*/EntityModel.msl;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;&#xD;&#xA;         Data Source=D:\Repos\GitHub\DevKit\DevKit\DevKit.Entity\DevKitDB.sdf&quot;"
                                                                                            providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
