--- a/DevKit/DevKit.Business/DevKit.Business.csproj
+++ b/DevKit/DevKit.Business/DevKit.Business.csproj
@@ -43,6 +43,7 @@
     <Compile Include="ConnectServerBusiness.cs" />
     <Compile Include="EntityBusiness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScriptBusiness.cs" />
     <Compile Include="StoredProcedureBusiness.cs" />
     <Compile Include="TableBusiness.cs" />
   </ItemGroup>
