--- a/DevKit/DevKit.Data/DevKit.Data.csproj
+++ b/DevKit/DevKit.Data/DevKit.Data.csproj
@@ -66,6 +66,7 @@
     <Compile Include="ConnectServerData.cs" />
     <Compile Include="EntityData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScriptData.cs" />
     <Compile Include="StoredProcedureData.cs" />
     <Compile Include="TableData.cs" />
     <Compile Include="TableHelper.cs" />
