--- a/DevKit/DevKit.Entity/DevKit.Entity.csproj
+++ b/DevKit/DevKit.Entity/DevKit.Entity.csproj
@@ -48,6 +48,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DBScriptSession.cs">
+      <DependentUpon>EntityModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="DBServer.cs">
       <DependentUpon>EntityModel.tt</DependentUpon>
     </Compile>
