--- a/DevKit/DevKit.UI/App.config
+++ b/DevKit/DevKit.UI/App.config
@@ -7,9 +7,12 @@
       <section name="DevKit.UI.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
   </configSections>
+  <appSettings>
+    <add key="sp_user_name" value="Your name here" />
+  </appSettings>
   <connectionStrings>
     <add name="DevKitEntities"
-         connectionString="metadata=res://*/EntityModel.csdl|res://*/EntityModel.ssdl|res://*/EntityModel.msl;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;&#xD;&#xA;         Data Source=D:\Developer\Projects\DevKit\DevKit\DevKit.Entity\DevKitDB.sdf&quot;"
+         connectionString="metadata=res://*/EntityModel.csdl|res://*/EntityModel.ssdl|res://*/EntityModel.msl;provider=System.Data.SqlServerCe.4.0;provider connection string=&quot;&#xD;&#xA;         Data Source=G:\GitHub\Devkit\DevKit\DevKit\DevKit.Entity\DevKitDB.sdf&quot;"
                                                                                            providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
