--- a/DevKit/DevKit.UI/DevKit.UI.csproj
+++ b/DevKit/DevKit.UI/DevKit.UI.csproj
@@ -94,6 +94,12 @@
     <Compile Include="frmBase.Designer.cs">
       <DependentUpon>frmBase.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmBoost.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmBoost.Designer.cs">
+      <DependentUpon>frmBoost.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmDaily.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -180,6 +186,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StringHelper.cs" />
     <Compile Include="UIHelper.cs" />
+    <EmbeddedResource Include="frmBoost.resx">
+      <DependentUpon>frmBoost.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmDaily.resx">
       <DependentUpon>frmDaily.cs</DependentUpon>
     </EmbeddedResource>
@@ -293,6 +302,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Dakirby309-Windows-8-Metro-Apps-Visual-Studio-Metro.ico" />
+    <Content Include="Templates\SearchListTemplate.txt" />
+    <None Include="Resources\drill.png" />
     <None Include="Resources\Grid.png" />
     <None Include="Resources\1458590027_grid-layout-window.ico" />
     <None Include="Resources\1458590075_grid-layout-window.png" />
